--- a/get_blow_final.ipynb
+++ b/get_blow_final.ipynb
@@ -57,8 +57,8 @@
    "outputs": [],
    "source": [
     "   # Authenticate to Twitter\n",
-    "auth = tweepy.OAuthHandler(\"Zt00PBtXB16LM2gxRWoVBXoaP\",\"UwN96llwc7D44yo8zEIPqKI9JOcxrVWaSHWExQRmVJNOAjRoe2\")\n",
-    "auth.set_access_token(\"1358336778479022081-KBu5DLwt07lrfxFGOJe398rQkuFQZk\",\"Rwx1tzqQwp41If2cCBjoM3hqNnN2w4Z1UcZT3V7rATYBN\")\n",
+    "auth = tweepy.OAuthHandler(\"\",\"\")\n",
+    "auth.set_access_token(\"\",\"\")\n",
     "    # Create API object\n",
     "api = tweepy.API(auth, wait_on_rate_limit=True, wait_on_rate_limit_notify=True)"
    ]
